--- a/config/aliases/aliases_init.cfg
+++ b/config/aliases/aliases_init.cfg
@@ -2,8 +2,7 @@ echoln "[aliases_init.cfg] Start of aliases_init.cfg";
 
 
 
-echoln "[aliases_init.cfg] {2} Registering shorthand aliases for common commands";
-// CS2 alias "rc" "fin_nothing";                                // Clears world decals
+echoln "[aliases_init.cfg] {2} Registering shorthand aliases for common commands";=
 alias "dc"  "disconnect";                                       // Disconnect from server
 alias "nc"  "noclip";                                           // Toggle. Player becomes non-solid and flies.  Optional argument of 0 or 1 to force enable/disable
 alias "q"   "quit";                                             // Quit the game
@@ -19,7 +18,6 @@ alias "fin_everykey"     "";                                      // You can set
 alias "fin_onyaw"        "";
 alias "fin_onpitch"      "";
 alias "fin_onmousemove"  "";
-// CS2 fin_clanid removed from fin_keycontainer because currently clan tags don't show up in game and it causes console UserInfo spam
 
 
 echoln "[aliases_init.cfg] {4} Registering rebindable pitch/yaw aliases";
