--- a/config/primary/binds.cfg
+++ b/config/primary/binds.cfg
@@ -3,6 +3,7 @@ echoln "[binds.cfg] Start of binds.cfg";
 
 
 echoln "[binds.cfg] {1} Resetting binds";
+input_button_code_is_scan_code "true";                          // Bind keys based on keyboard position instead of key name
 binddefaults;                                                   // Bind all keys to their default values.
 unbindall;	                                                    // Unbind all keys.
 
@@ -101,7 +102,7 @@ bind "X"              "fin_nadexhon; slot7;                                     
 bind "C"              "fin_handswap;                                                        ; fin_keycontainer";                    // This is the c key
 bind "V"              "fin_nadexhon; slot8;                                                 ; fin_keycontainer";                    // This is the v key
 bind "B"              "+fin_desubtick_voicerecord;                                          ; fin_keycontainer";                    // No keycontainer = works in the menu  // This is the b key
-bind "N"              "buymenu;                                                             ; fin_keycontainer";                    // This is the n key
+bind "N"              "buymenu; close_buymenu;                                              ; fin_keycontainer";                    // This is the n key
 bind "M"              "radio2;                                                              ; fin_keycontainer";                    // This is the m key
 bind ","              "radio1;                                                              ; fin_keycontainer";                    // This is the comma key
 bind "."              "radio3;                                                              ; fin_keycontainer";                    // This is the period/full stop key
