--- a/config/primary/safety.cfg
+++ b/config/primary/safety.cfg
@@ -24,6 +24,7 @@ sv_invites_only_mainmenu "true";                                // If turned on,
 sv_kick_players_with_cooldown "2";                              // (0: do not kick on insecure servers; 1: kick players with Untrusted status or convicted by Overwatch; 2: kick players with any cooldown)
 sv_playerradio_use_allowlist "true";                            // playerradio commands may only use responses from an allow list of commands.
 sv_server_verify_blood_on_player "true";
+sv_disable_observer_interpolation "true";                       // Disallow interpolating between observer targets on this server.
 rcon_connected_clients_allow "false";                           // Allow clients to use rcon commands on server.
 ui_setting_advertiseforhire_auto "0";                           // Whether users will automatically advertise for invites (0: off; 1: last; 2: auto)
 hostname_in_client_status "false";                              // Show server hostname in client status.
@@ -46,16 +47,6 @@ cl_chatfilters "2147483647";
 // 10000000 | 128 | Unknown/unused
 // 11111111 | 255 | All of the above on
 // 2147483647 Will enable every possible value.
-//
-// CS2 cl_downloadfilter "nosounds";                            // Determines which files can be downloaded from the server (all, none, nosounds)
-// CS2 sv_reliableavatardata "2";                               // When enabled player avatars are exchanged via gameserver (0: off, 1: players, 2: server)
-// CS2 sv_steamauth_enforce "2";                                // Requires connection to steam servers for VAC
-// CS2 cl_disablehtmlmotd "1";                                  // Turns off HTML message-of-the-day's in community servers
-// CS2 voice_recordtofile "1";                                  // Records mic and voice data to local files.
-// CS2 cl_allowdownload "0";                                    // 1: Client downloads customization files 0: Client doesn't
-// CS2 cl_hideserverip "1";                                     // Server IPs will be hidden from console (except from the "status" command)
-// CS2 cl_allowupload "0";                                      // 1: Client uploads customization files 0: Client doesn't
-// CS2 sv_consistency "0";                                      // Whether the server enforces file consistency for critical files (Currently broken)
 
 
 
