--- a/config/primary/ui.cfg
+++ b/config/primary/ui.cfg
@@ -42,6 +42,7 @@ fin_blockscreen_on;
 
 echoln "[ui.cfg] {3} Adjusting the HUD";
 cl_teamcounter_playercount_instead_of_avatars "true";
+cl_show_equipped_character_for_player_avatars "true";
 cl_scoreboard_survivors_always_on "true";                       // Fixes a problem calculating the number of dead players when rounds end
 cl_drawhud_force_teamid_overhead "1";                           // 0: default; 1: draw team ID even if hud disabled; -1: force no team ID
 cl_radial_radio_tap_to_ping "true";                             // When tapping the radial radio button, leave a ping if nothing is selected within the time in seconds set in cl_radial_menu_tap_duration
@@ -121,10 +122,6 @@ cl_inventory_saved_sort2 "inv_sort_rarity"
 //   Equipped   | inv_sort_equipped
 //   Aquired    | inv_sort_age
 //   Quality    | inv_sort_rarity
-
-
-// CS2 echoln "[ui.cfg] {4} Reset/refresh states";
-// CS2 hud_reloadscheme;                                               // Reloads hud layout and animation scripts.
 
 
 
