--- a/config/primary/visuals.cfg
+++ b/config/primary/visuals.cfg
@@ -15,43 +15,26 @@ fin_vmp_highfov;
 //fin_vmp_classic - Classic preset (viewmodel_presetpos 3)
 
 
-// CS2 echoln "[visuals.cfg] Minimizing view bobbing";
-// CS2 fin_vmp_minbob;
-//fin_vmp_minbob - Changes recoil, view bobbing, and gun sway to all be their minimums
-//fin_vmp_maxbob - Changes recoil, view bobbing, and gun sway to all be their maximums
-
-
 echoln "[visuals.cfg] {2} Changing graphics settings";
 mobile_fps_increase_during_charging "true";                     // MOBILE_FPS_CONTROL: If true we increase framerate limit while charging
 mobile_fps_increase_during_touch "true";                        // MOBILE_FPS_CONTROL: If true we increase framerate limit during touch
 mobile_fps_limit "0";                                           // MOBILE_FPS_CONTROL: Mobile FPS limit - 15, 30, 60
-safezonex "0.9";                                                 // The percentage of the screen width that is considered safe from overscan. Cannot result in a width less than the height.
-safezoney "0.9";                                                 // The percentage of the screen height that is considered safe from overscan
+safezonex "0.9";                                                // The percentage of the screen width that is considered safe from overscan. Cannot result in a width less than the height.
+safezoney "0.9";                                                // The percentage of the screen height that is considered safe from overscan
 fps_max "0";                                                    // Frame rate limiter.  0=no limit.  Does not apply to dedicated server.
 fps_max_ui "0";                                                 // Frame rate limiter while the game UI is displayed.  0=no limit.  Does not apply to dedicated server.
 fps_max_tools "0";                                              // Additional frame rate limit while in tools mode and a window other than the game window has focus. Note that fps_max still applies, this only allows the maximum frame rate for tools mode to be lower. 0=no tools specific limit.
 panorama_max_fps "0";                                           // [developmentonly+defensive]
+enable_priority_boost;                                          // [developmentonly+defensive] Disable focus based priority boost
 panorama_max_overlay_fps "0";                                   // [developmentonly+defensive]
+cl_itemimages_dynamically_generated "2";                        // 2: use render-targets, fallback to cache and disk; 1: no render targets, but use cache and fallback to disk; 0: disk assets only
+cl_ragdoll_limit "-1";                                          // Maximum number of ragdolls to show (-1 disables limit)
 battery_saver "false";                                          // OBSOLETE replaced by mobile_fps_* - Battery saver mode. 0=off, 1=on
 r_dof_override "false";
 r_fullscreen_gamma "2.2";                                       // Gamma 'typically 2.2 for CRT and 1.7 for LCD'
 r_player_visibility_mode "1";                                   // Improves the legibility of players in low contrast situations. Enabling Boost Player Contrast can degrade graphics performance.
-cl_itemimages_dynamically_generated "2";                        // 2: use render-targets, fallback to cache and disk; 1: no render targets, but use cache and fallback to disk; 0: disk assets only
 engine_low_latency_sleep_after_client_tick "true";              // When r_low_latency is enabled, this moves the low latency sleep on tick frames to happen after client simulation.
-// CS2 triple_monitor_mode "0";                                  // 1: triple-monitor mode, restricting UI elements to the middle third of the display
-// CS2 muzzleflash_light "1";                                    // Enables or disables muzzle flash light from firing weapons
-// CS2 mat_queue_mode "-1";                                      // See https://www.reddit.com/r/GlobalOffensive/comments/5zkpwn
-// CS2 mat_queue_report "0";                                     // Report thread stalls. Positive numbers will filter by stalls >= time in ms. -1 reports all locks.
-// CS2 mat_queue_priority "1";                                   // See https://www.reddit.com/r/GlobalOffensive/comments/5zkpwn
-// CS2 mat_monitorgamma_tv_enabled "0";                          // TV Gamma
-// CS2 r_drawtracers_firstperson "1";                            // Don't show bullet tracers from YOUR weapon
-// CS2 r_eyeshift_x "0";                                         // Presumably determines the X offset of player models' eyes
-// CS2 r_eyeshift_y "0";                                         // Presumably determines the Y offset of player models' eyes
-// CS2 r_eyeshift_z "0";                                         // Presumably determines the Z offset of player models' eyes
-// CS2 r_eyegloss "1";                                           // 0: Eyes are matte 1: Eyes are glossy
-// CS2 r_eyesize "0";                                            // (According to some SFM info) this controls the size of eyes compared to their eyelids
-// CS2 r_eyemove "0";                                            // 0: Eye movement animations turned off 1: Eyes move
-// CS2 r_dynamic "1";                                            // Enables dynamic lighting such as flashbang effects on walls
-cl_ragdoll_limit "-1";                                            // Maximum number of ragdolls to show (-1 disables limit)
+
+
 
 echoln "[visuals.cfg] End of visuals.cfg";
