--- a/config/primary/audio.cfg
+++ b/config/primary/audio.cfg
@@ -10,9 +10,7 @@ snd_roundstart_volume "0";                                      // Changes the r
 snd_menumusic_volume "0";                                       // Changes the main menu   music volume (Max is 0.60, .06 is 10% of that)
 snd_roundend_volume "0";                                        // Changes the round end   music volume (Max is 0.60)
 snd_mvp_volume "0.03";                                          // Changes the music kit end of round MVP volume (Max is 0.60, .03 is 5% of that)
-volume "0.1225";                                                // Changes the master volume
-// CS2 -fin_loudshift;                                          // Sets the global volume to our default
-// CS2 snd_dzmusic_volume "0.03";                               // Changes the Danger Zone music volume (Max is 0.60, .03 is 5% of that)
+-fin_loudshift;                                                 // Sets the global volume to our default
 //   %5 = 0.0025
 //  %10 = 0.01
 //  %15 = 0.0225
@@ -37,6 +35,7 @@ volume "0.1225";                                                // Changes the m
 
 echoln "[audio.cfg] {2} Changing miscellaneous sound settings";
 sv_ignoregrenaderadio "true";                                   // Turn off Fire in the hole messages
+snd_mix_async "true";                                        // 0: Synchronous sound mixing (for CPUs with very few threads) 1: Asynchronous sound mixing (for CPUs with many threads)
 snd_headphone_eq "1";                                           // Select Headphone EQ Preset (0: Natural, 1: Crisp, 2: Smooth)
 snd_steamaudio_enable_perspective_correction "true";            // Enable perspective correction for 3D audio.
 snd_spatialize_lerp "0";                                        // "L/R Isolation" in-game audio setting
@@ -49,11 +48,5 @@ bot_chatter "off";                                               // Control how 
 // For snd_spatialize_lerp:
 // - 0% - Physically Accurate (default): Physically modeled sound panning behavior most accurately reflecting the emitter position.
 // - 100% - Isolated L/R: Sound emitters that are directly to the side of the player will be hard panned with minimal blending into the opposite L/R channel. This provides a strong sense of left vs right but can be positionally misleading at certain angles to the listener. For players who prefer legacy sound panning behaviour.
-//
-// CS2 snd_surround_speakers "0";                                // -1: Auto detect 0/1: Force stereo (with HRTF) 2: Force mono/stereo 4: 4 channel surround 5: 5.1 surround 7: 7.1 surround
-// CS2 snd_prefetch_common "1";                                  // Preloads commonly used sounds
-// CS2 snd_pitchquality "1";                                     // 0: Linear sound mixer 1: Interpolated sound mixer
-// CS2 snd_mix_async "1";                                        // 0: Synchronous sound mixing (for CPUs with very few threads) 1: Asynchronous sound mixing (for CPUs with many threads)
-// CS2 dsp_enhance_stereo "1";                                   // If set to 1, enhanced 3D Stereo sound
 
 echoln "[audio.cfg] End of audio.cfg";
