--- a/config/primary/misc.cfg
+++ b/config/primary/misc.cfg
@@ -16,17 +16,11 @@ mp_logmoney "true";                                             // Enables money
 mp_logdetail_items "true";                                      // Logs a line any time a player acquires or loses an item.
 cl_error_report_time "10";                                      // Minimum time in seconds that must elapse before printing prediction error summary. 0 to disable.
 fs_report_sync_opens "1";                                       // 0:Off, 1:Always, 2:Not during load
-// CS2 con_timestamp "1";                                       // for diagnosing issues with your game if they ever
-// CS2 echoln "[misc.cfg] Setting up damage printouts";
-// CS2 con_filter_text_out "cl_hud_color";                       // This will print damage dealt in the top left of your
-// CS2 con_filter_text "Damage Given to ";                       // screen after dying and again at the end of the round.
-// CS2 con_filter_enable "2";                                    // This only works on sv_max_allowed_developer 1 servers
 
 
 echoln "[misc.cfg] {2} Disabling random game instructor tips (but keeping burst and bomb notifications)";
 gameinstructor_enable "false";                                  // Display in game lessons that teach new players.
 cl_autohelp "true";                                             // Show bomb pickup and burst toggle notifications
-// CS2 cl_showhelp "0";                                          // Turns off (seemingly random) distracting automatic on-screen help tips
 
 
 echoln "[misc.cfg] {3} Miscellaneous tweaks";
@@ -46,14 +40,7 @@ bot_quota "0";                                                  // Determines th
 func_break_max_pieces "0";                                      // Limits the max amount of "pieces" that come off of broken objects (ex. extra particles that come off of nuke/mirage/cache vents)
 spec_replay_autostart "false";                                  // Auto-start Killer Replay when available
 sv_competitive_minspec "true";                                  // Enable to force certain client convars to minimum/maximum values to help prevent competitive advantages.
-// CS2 demo_index "1";                                           // 0: Handle demos the normal old way 1: Create full frame baselines to improve performance of seeking forward and rewinding within demo files.
-// CS2 demo_index_max_other "2000";                              // Sets the max count of index files of other (non-current) demos.
-// CS2 bugreporter_uploadasync "1";                              // Upload attachments asynchronously
-// CS2 sv_competitive_official_5v5 "1";                          // Enable to force the server to show 5v5 scoreboards and allow spectators to see characters through walls.
-// CS2 cl_freezecameffects_showholiday "0";                      // 0: Disable holiday themed freezecam 1: Enable holiday themed freezecam (be warned, it's pretty cluttered)
-// CS2 cl_disablefreezecam "1";                                  // Turn on/off freezecam on client
-// CS2 cl_autowepswitch "0";                                     // Automatically switch to picked up weapons (if more powerful)
-
+sv_holiday_mode "0";                                            // 0 = OFF, 1 = Halloween, 2 = Winter
 
 
 echoln "[misc.cfg] {4} Finishing up";
@@ -63,9 +50,6 @@ exec "./config/utility/grammarly/quit.cfg";                        // "Autocorre
 r_dof_override_near_blurry "80";                                // Sets depth of field blur to blur everything behind guns (80 isn't scientific, just what looked correct). Only applies when r_dof_override is set to true.
 game_type "0";                                                  // The current game type. See GameModes.txt.
 game_mode "1";                                                  // The current game mode (based on game type)
-// CS2 net_graphheight "9999";                                   // Height of netgraph panel (9999) is sending it off-screen
-// CS2 unbindalljoystick;                                        // Removes all "Joystick" (controller) binds, this avoids some hud issues
-// CS2 heartbeat;                                                // Manually checks in with Valve's servers (presumably this will help get rid of the "Connecting to the Counter-Strike Network..." banner faster)
 
 
 
