--- a/practice.cfg
+++ b/practice.cfg
@@ -4,17 +4,14 @@ echoln "[practice.cfg] Start of practice.cfg";
 
 echoln "[practice.cfg] ";
 echoln "[practice.cfg] Loading...";
-echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.8";
+echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.9";
 echoln "[practice.cfg] steamcommunity.com/id/bigfinfrank";
-echoln "[practice.cfg] Last edited: November 2nd 2023";
+echoln "[practice.cfg] Last edited: November 3rd 2023";
 echoln "[practice.cfg] ";
 
 
 
 echoln "[practice.cfg] {0} Hiding server from community browser";
-// CS2 host_players_show "0";
-// CS2 host_rules_show "0";
-// CS2 host_info_show "0";
 sv_visiblemaxplayers "0";                               // Overrides the max players reported to prospective clients
 sv_tags "hidden";                                       // Server tags. Used to provide extra information to clients when they're browsing for servers. Separate tags with a comma.
 sv_cheats "1";
@@ -23,8 +20,6 @@ sv_cheats "1";
 
 echoln "[practice.cfg] {1} Setting up server contact, branding, and skins API endpoint";
 hostname "Private practice server by /id/bigfinfrank";  // Hostname for server.
-// CS2 pho_inspect_url "http://127.0.0.1:55604";         // URL to inspect page
-// CS2 sv_contact "draco@fin.fail";
 motdfile "motd.txt";                                    // The MOTD file to load.
 
 
@@ -58,7 +53,6 @@ game_mode "1";                                          // The current game mode
 
 
 echoln "[practice.cfg] {5} Changing settings to use Valve's official competitive settings as a base";
-// CS2 sv_competitive_official_5v5 "1";
 sv_competitive_minspec "true";                          // Enable to force certain client convars to minimum/maximum values to help prevent competitive advantages.
 sv_pausable "0";                                        // Is the server pausable.
 
@@ -85,10 +79,6 @@ bot_ignore_players "true";                              // Bots will not see non
 
 
 echoln "[practice.cfg] {7} Changing tickrate and networking settings";
-// CS2 sv_minupdaterate "128";
-// CS2 sv_maxupdaterate "128";
-// CS2 sv_forcepreload "1";
-// CS2 sv_mincmdrate "128";
 sv_minrate "1000000";                                   // Min bandwidth rate allowed on server, 0 == unlimited
 sv_maxrate "1000000";                                   // Max bandwidth rate allowed on server, 0 == unlimited
 rate "1000000";                                         // Min bytes/sec the host can receive data
@@ -111,6 +101,7 @@ engine_low_latency_sleep_after_client_tick "true";      // When r_low_latency is
 
 
 echoln "[practice.cfg] {9} Changing security settings";
+sv_disable_observer_interpolation "true";               // Disallow interpolating between observer targets on this server.
 sv_server_verify_blood_on_player "true";
 sv_playerradio_use_allowlist "true";                    // playerradio commands may only use responses from an allow list of commands.
 sv_kick_players_with_cooldown "2";                      // (0: do not kick on insecure servers; 1: kick players with Untrusted status or convicted by Overwatch; 2: kick players with any cooldown)
@@ -134,10 +125,6 @@ mp_spawnprotectiontime "0";                             // Kick players who team
 mp_footsteps_serverside "true";                         // Makes the server always play footstep sounds. Clients never calculate footstep sounds locally, instead relying on the server.
 nextmap_print_enabled "false";                          // When enabled prints next map to clients
 hostname_in_client_status "false";                      // Show server hostname in client status.
-// CS2 sv_max_allowed_developer "0";
-// CS2 sv_allow_wait_command "0";
-// CS2 sv_reliableavatardata "2";
-// CS2 sv_steamauth_enforce "2";
 
 
 
@@ -228,8 +215,6 @@ mp_freezetime "0";                                      // how many seconds to k
 
 
 echoln "[practice.cfg] {17} Enabling automatic GOTV Demo recording";
-// CS2 tv_snapshotrate1 "128";
-// CS2 tv_snapshotrate "128";
 tv_autorecord "true";                                   // Automatically records all games as SourceTV demos.
 tv_nochat "false";                                      // Don't receive chat messages from other SourceTV spectators
 tv_enable "true";                                       // Activates SourceTV on server.
@@ -397,9 +382,9 @@ respawn_player;                                         // Respawns the player f
 
 echoln "[practice.cfg] ";
 echoln "[practice.cfg] Loaded!";
-echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.8";
+echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.9";
 echoln "[practice.cfg] steamcommunity.com/id/bigfinfrank";
-echoln "[practice.cfg] Last edited: November 2nd 2023";
+echoln "[practice.cfg] Last edited: November 3rd 2023";
 echoln "[practice.cfg] ";
 
 
